--- a/packages/backdrop/package.json
+++ b/packages/backdrop/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "@undercoatcss/framework",
+  "name": "@undercoatcss/backdrop",
   "version": "0.1.1",
   "description": "A lightweight CSS framework with no default theme out of the box.",
   "keywords": [
     "CSS framework",
     "CSS",
-    "framework"
+    "framework",
+    "backdrop"
   ],
   "license": "GPL-3.0-or-later",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/undercoat/undercoat.git"
-  },
-  "dependencies": {
-    "@undercoatcss/backdrop": "^0.1.1"
   }
 }
