--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "name": "root",
   "private": true,
+  "browser": "packages/framework/dist/framework.min.js",
   "devDependencies": {
-    "lerna": "^3.16.4"
-  }
+    "lerna": "^3.16.4",
+    "postcss-csso": "^3.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "rollup": "^1.18.0",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-resolve": "^5.1.0",
+    "rollup-plugin-postcss": "^2.0.3"
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w"
+  },
+  "files": [
+    "dist"
+  ]
 }
