--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postcss-preset-env": "^6.7.0",
     "rollup": "^1.18.0",
     "rollup-plugin-node-resolve": "^5.1.0",
-    "rollup-plugin-postcss": "^2.0.3"
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-terser": "^5.1.1"
   },
   "scripts": {
     "build": "rollup -c",
