Add Stylelint and its dependencies

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "rollup": "^1.18.0",
     "rollup-plugin-node-resolve": "^5.1.0",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-terser": "^5.1.1"
+    "rollup-plugin-terser": "^5.1.1",
+    "stylelint": "^10.1.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-order": "^3.0.1"
   },
   "scripts": {
     "build": "rollup -c",
