Add breadcrumbs package to the framework dependencies

--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -13,6 +13,7 @@
     "url": "git+https://github.com/undercoat/undercoat.git"
   },
   "dependencies": {
-    "@undercoatcss/backdrop": "^0.2.1"
+    "@undercoatcss/backdrop": "^0.2.1",
+    "@undercoatcss/breadcrumbs": "^0.1.0"
   }
 }
