--- a/packages/breadcrumb/package.json
+++ b/packages/breadcrumb/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@undercoatcss/breadcrumbs",
   "version": "0.1.0",
-  "description": "Breadcrumbs components for the Undercoat CSS framework",
+  "description": "Breadcrumb components for the Undercoat CSS framework",
   "keywords": [
-    "breadcrumbs",
+    "breadcrumb",
     "undercoat"
   ],
   "license": "GPL-3.0-or-later",
