--- a/packages/dialog/package.json
+++ b/packages/dialog/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@undercoatcss/dialog",
   "version": "0.1.1",
-  "description": "A lightweight CSS framework with no default theme out of the box.",
+  "description": "Dialog component for the Undercoat CSS Framework",
   "keywords": [
     "CSS framework",
     "CSS",
