--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -13,10 +13,8 @@
     "url": "git+https://github.com/undercoat/undercoat.git"
   },
   "dependencies": {
-    "@undercoatcss/grid": "^0.0.0"
-  },
-  "dependencies": {
     "@undercoatcss/backdrop": "^0.2.1",
-    "@undercoatcss/breadcrumb": "^0.1.0"
+    "@undercoatcss/breadcrumb": "^0.1.0",
+    "@undercoatcss/grid": "^0.0.0"
   }
 }
