--- a/packages/backdrop/package.json
+++ b/packages/backdrop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@undercoatcss/backdrop",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "A lightweight CSS framework with no default theme out of the box.",
   "keywords": [
     "CSS framework",
@@ -12,5 +12,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/undercoat/undercoat.git"
-  }
+  },
+  "gitHead": "c0400cc2376f539c20ab6378886ec2b6896d7c69"
 }
