--- a/packages/breadcrumb/package.json
+++ b/packages/breadcrumb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@undercoatcss/breadcrumb",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Breadcrumb component for the Undercoat CSS framework",
   "keywords": [
     "breadcrumb",
@@ -10,5 +10,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/undercoat/undercoat.git"
-  }
+  },
+  "gitHead": "c0400cc2376f539c20ab6378886ec2b6896d7c69"
 }
